# ChromaGoggles

./: COLOR_TRANSFER_COMPLETE.md  COLOR_TRANSFER_GUIDE.md  COLOR_TRANSFER_IMPLEMENTATION.md  COMPLETION_REPORT.md  CORRELATION_PRESERVING_GUIDE.md  DEVELOPER_GUIDE.md  IDE_SETUP.md  LICENSE  OVERVIEW.md  PERFORMANCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  example_usage.py  image_processor.py  main.py  pyproject.toml  requirements.txt  run.sh  start.sh  test_basic.py  test_refactored.py  visualizer.py
artanalyzer/: __init__.py
artanalyzer/colorspaces/: __init__.py  hcl.py  hsv.py  lab.py  lms.py  luv.py  oklab.py  oklch.py  rgb.py  xyz.py  ycbcr.py
artanalyzer/core/: __init__.py  color_space.py  color_transfer.py  registry.py  statistics.py
artanalyzer/ui/: __init__.py  tab_factory.py
artanalyzer/visualizations/: __init__.py  base.py  channels.py  color_transfer_viz.py  colormaps.py  density.py  scatter.py
chromagoggles/: __init__.py
chromagoggles/colorspaces/: __init__.py  hcl.py  hsv.py  lab.py  lms.py  luv.py  oklab.py  oklab_utils.py  oklch.py  rgb.py  xyz.py  ycbcr.py
chromagoggles/core/: __init__.py  color_space.py  color_transfer.py  registry.py  statistics.py
chromagoggles/ui/: __init__.py  tab_factory.py
chromagoggles/visualizations/: __init__.py  base.py  channels.py  color_transfer_viz.py  colormaps.py  density.py  scatter.py
