[project]
name = "artanalyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "BaerVervergaert",email = "bgmj.ververgaert@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy>=1.24.0",
    "colour-science>=0.4.7",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-image>=0.21.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
